--- a/index.html
+++ b/index.html
@@ -540,6 +540,24 @@
             color: var(--accent-cyan);
         }
 
+                    .social-links {
+                display: flex;
+                gap: 20px;
+                margin-top: 15px;
+            }
+
+            .social-links a {
+                font-size: 1.5rem;
+                color: var(--text-secondary);
+                text-decoration: none;
+                transition: all 0.3s ease;
+            }
+
+            .social-links a:hover {
+                color: var(--accent-cyan);
+                transform: scale(1.2);
+            }
+
         .footer-bottom {
             max-width: 1200px;
             margin: 60px auto 0;
@@ -684,6 +702,13 @@
                     <li><a href="#">Anantapur, Andhra Pradesh</a></li>
                 </ul>
             </div>
+                            <div class="footer-links">
+                    <h4>FOLLOW US</h4>
+                    <div class="social-links">
+                        <a href="https://x.com/rudracoreinfra" target="_blank" title="X (Twitter)">𝕏</a>
+                        <a href="https://www.instagram.com/rudracoreinfra/" target="_blank" title="Instagram">📷</a>
+                    </div>
+                </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 Rudracore Infra. All Rights Reserved.</p>
